Fixed issue: text in headers and input left align in arrays text with number only option

--- a/templates/default/css/template.css
+++ b/templates/default/css/template.css
@@ -759,3 +759,7 @@ td.answer-item.text-center
 {
     vertical-align: middle;
 }
+
+table.numbers-only th, table.numbers-only input {
+    text-align: right;
+}
